# rust-cdk-lambda

./: Cargo.toml  README.md
cdk/: package-lock.json  package.json
cdk/lib/: cdk-stack.ts
common/: Cargo.toml
common/src/: lib.rs
session/: Cargo.toml
session/src/: main.rs
user/: Cargo.toml
user/src/: main.rs
