[package]
name = "user"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.0.0", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "0.39.0"
common = { version = "0.1.0", path = "../common" }
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

